--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
           <h3 id="experience">Experience</h3>
           <!-- Experience Details -->
           <p>Sii, Technical Product Owner<br />August 2023 - now</p>
+          <p>Codenotary, Product Owner<br />May 2022 - July 2023</p>
           <!-- More Experience Details -->
           <h3 id="education">Education</h3>
           <!-- Education Details -->
