--- a/index.html
+++ b/index.html
@@ -27,32 +27,25 @@
           </li>
         </ul>
         <!-- Social Media Links -->
+        <!-- Social Media Links -->
         <li class="social-media">
           <a
             href="https://www.facebook.com/marcin.kaminski.01/"
             class="social-link"
           >
-            <svg viewBox="0 0 24 24" fill="#ffffff">
-              <img src="./icons/facebook.svg" alt="Facebook">
-            </svg>
+            <img src="./icons/facebook.svg" alt="Facebook" />
           </a>
           <a href="https://twitter.com/emkaminsk" class="social-link">
-            <svg viewBox="0 0 24 24" fill="#ffffff">
-              <img src="./icons/x.svg" alt="X.com">
-            </svg>
+            <img src="./icons/x.svg" alt="Twitter" />
           </a>
           <a
             href="https://www.linkedin.com/in/marcinkaminski/"
             class="social-link"
           >
-            <svg viewBox="0 0 24 24" fill="#ffffff">
-              <img src="./icons/linkedin.svg" alt="Linkedin">
-            </svg>
+            <img src="./icons/linkedin.svg" alt="Linkedin" />
           </a>
           <a href="https://github.com/emkaminsk" class="social-link">
-            <svg viewBox="0 0 24 24" fill="#ffffff">
-              <img src="./icons/github.svg" alt="GitHub">
-            </svg>
+            <img src="./icons/github.svg" alt="GitHub" />
           </a>
         </li>
         <ul>
@@ -100,24 +93,41 @@
           <h3 id="experience">Experience</h3>
           <!-- Experience Details -->
           <div class="job-experience">
-            <strong>Sii,</strong> <span class="job-title">Technical Product Owner</span>
+            <strong>Sii,</strong>
+            <span class="job-title">Technical Product Owner</span>
             <p>August 2023 - now</p>
             <p>Tools: VSCode, Azure DevOps, Miro</p>
             <p>Project technologies: Java, React, Kubernetes</p>
           </div>
           <div class="job-experience">
-            <strong>Codenotary,</strong> <span class="job-title">Product Owner</span>
+            <strong>Codenotary,</strong>
+            <span class="job-title">Product Owner</span>
             <p>May 2022 - July 2023</p>
             <ul>
-              <li>Leading the development of all Codenotary’s IT products, such as vault.immudb.io, sbomcenter.io, Trustcenter, and Opvizor.</li>
-              <li>Managed product lifecycle from vision to delivery, interviewing customers to build and prioritize the backlog.</li>
-              <li>Collaborated with the engineering manager and global multicultural team to translate market and product requirements into documentation, user stories, and test cases.</li>
-              <li>Coordinated refinements, conducted team retrospectives, and implemented engineering best practices.</li>
+              <li>
+                Leading the development of all Codenotary’s IT products, such as
+                vault.immudb.io, sbomcenter.io, Trustcenter, and Opvizor.
+              </li>
+              <li>
+                Managed product lifecycle from vision to delivery, interviewing
+                customers to build and prioritize the backlog.
+              </li>
+              <li>
+                Collaborated with the engineering manager and global
+                multicultural team to translate market and product requirements
+                into documentation, user stories, and test cases.
+              </li>
+              <li>
+                Coordinated refinements, conducted team retrospectives, and
+                implemented engineering best practices.
+              </li>
               <li>Assisted with release planning and manual testing.</li>
             </ul>
             <p>Tools: VSCode, Autorest API, GitHub, Miro, MobaXterm</p>
-            <p>Project technologies: Go, Python, Typescript, Kubernetes, Docker</p>
-          </div>                        
+            <p>
+              Project technologies: Go, Python, Typescript, Kubernetes, Docker
+            </p>
+          </div>
           <h3 id="education">Education</h3>
           <!-- Education Details -->
           <p>
@@ -130,6 +140,41 @@
         </section>
       </div>
     </main>
+    <aside id="sidebar">
+      <section class="sidebar-section">
+        <h4>Skills</h4>
+        <ul>
+          <li>Relationship-building</li>
+          <li>Engagement and loyalty</li>
+          <!-- Add more skills here -->
+        </ul>
+      </section>
+      <section class="sidebar-section">
+        <h4>Technical Skills</h4>
+        <ul>
+          <li>Docker, Git, GitHub, GH Actions</li>
+          <li>
+            Python3 (pandas, dash, plotly) in VSCode, Pycharm, Jupyter, Google
+            Colab
+          </li>
+          <li>Business Objects, RapidMiner, Weka, PowerBI, Tableau</li>
+          <li>SQL, Linux, curl, Vim, OpenAPI/swagger</li>
+          <li>
+            Wordpress, SEO Optimization, Markdown, AsciiDoc, Azure, AWS, Mermaid
+          </li>
+          <li>Prompt Engineering with GPT-4, Auto-GPT, multiple other LLMs</li>
+        </ul>
+      </section>
+      <section class="sidebar-section">
+        <h4>Languages</h4>
+        <ul>
+          <li>English - very fluent</li>
+          <li>Spanish - basic communication</li>
+          <!-- Add more languages here -->
+        </ul>
+      </section>
+      <!-- Add more sections as needed -->
+    </aside>
     <footer class="container">
       <small>© 2023 Marcin Kamiński</small>
     </footer>
