--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                   <h3>Contact Information</h3>
                   <p>
                     Email:
-                    <a href="mailto:marcin@mkkonsultant.com"
-                      >marcin@mkkonsultant.com</a
+                    <a href="mailto:emkaminsk@gmail.com"
+                      >emkaminsk@gmail.com</a
                     >
                   </p>
                 </div>
@@ -102,14 +102,16 @@
           <h3 id="experience">Experience</h3>
           <!-- Experience Details -->
           <div class="job-experience">
-            <strong>Sii,</strong>
+            <strong>Sii Polska,</strong>
             <span class="job-title">Technical Product Owner</span>
             <p>August 2023 - now</p>
             <ul>
               <li>
-                Product Owner for several teams speeding up development of
-                product's Platform in a leading international pharmaceutical
-                company.
+                Product Owner for two teams in Prometheus Group, developing Master Data as a Service solutions.
+              </li>              
+              <li>
+                Product Owner for several teams in Sartorius AG speeding up development of
+                Umetrics Studio, a leading cloud Data Science platform.
               </li>
             </ul>
             <p>Tools: VSCode, Azure DevOps, Miro</p>
