--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@
 </svg>
 </button>
 </li>
+<li>
+<button aria-label="Toggle sidebar" aria-controls="sidebar" aria-pressed="true" class="contrast sidebar-toggle-btn" data-sidebar-toggle="">
+<svg aria-hidden="true" fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24">
+<!-- Panel icon -->
+<rect height="18" rx="2" ry="2" width="18" x="3" y="3"></rect>
+<line x1="9" x2="9" y1="3" y2="21"></line>
+</svg>
+</button>
+</li>
 </ul>
 </nav>
 <header class="container">
@@ -290,7 +299,14 @@
 </div>
 </div>
 </main>
-<aside aria-label="Skills and qualifications" id="sidebar">
+<aside aria-label="Skills and qualifications" data-sidebar-state="open" id="sidebar">
+<button aria-label="Close sidebar" class="sidebar-close-btn" data-sidebar-close="">
+<svg aria-hidden="true" fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24">
+<!-- X icon -->
+<line x1="18" x2="6" y1="6" y2="18"></line>
+<line x1="6" x2="18" y1="6" y2="18"></line>
+</svg>
+</button>
 <section class="sidebar-section">
 <h4>Skills</h4>
 <ul><li>Discovery &amp; Delivery, Scrum, User Story &amp; Gherkin / BDD, Product Strategy, KPI Development</li><li>User Story Mapping, Opportunity Solution Tree, Workshops &amp; Interviews, RICE / Priority Matrix, Data Analysis</li><li>Event Storming, Domain Driven Design, UML, Process Modeling, Architecture Design</li><li>Master Data Management, OCR Systems, Data Science, Credit Lending, Risk Management, Data Warehousing</li></ul>
@@ -308,6 +324,13 @@
 <ul><li>English (Very Fluent), Polish (Native), Spanish (B2), German (A2)</li></ul>
 </section>
 </aside>
+<!-- Restore Sidebar Button -->
+<button aria-label="Restore sidebar" class="restore-sidebar-btn" data-restore-sidebar="">
+<svg aria-hidden="true" fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24">
+<!-- Chevron left icon -->
+<polyline points="15 18 9 12 15 6"></polyline>
+</svg>
+</button>
 <!-- Back to Top Button -->
 <button aria-label="Back to top" class="back-to-top">
 <svg aria-hidden="true" fill="none" height="24" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewbox="0 0 24 24" width="24">
@@ -320,6 +343,7 @@
 </footer>
 <!-- JavaScript -->
 <script src="js/minimal-theme-switcher.js"></script>
+<script src="js/sidebar-toggle.js"></script>
 <script src="js/main.js"></script>
 </body>
 </html>
