chore: add home link

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
 </ul>
 <!-- Social Media Links -->
 <div class="social-media">
+<a aria-label="Homepage" class="social-link" href="https://mkhome.byst.re/" rel="noopener noreferrer" target="_blank">
+<img alt="" aria-hidden="true" src="./icons/home.svg"/>
+</a>
 <a aria-label="Facebook profile" class="social-link" href="https://www.facebook.com/marcin.kaminski.01/" rel="noopener noreferrer" target="_blank">
 <img alt="" aria-hidden="true" src="./icons/facebook.svg"/>
 </a>
