--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 </ul>
 <!-- Social Media Links -->
 <div class="social-media">
-<a aria-label="Homepage" class="social-link" href="https://mkhome.byst.re/" rel="noopener noreferrer" target="_blank">
+<a aria-label="Homepage" class="social-link" href="https://mkhome.byst.re/" rel="noopener noreferrer">
 <img alt="" aria-hidden="true" src="./icons/home.svg"/>
 </a>
 <a aria-label="Facebook profile" class="social-link" href="https://www.facebook.com/marcin.kaminski.01/" rel="noopener noreferrer" target="_blank">
